--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
     "seed": "node ./db/seed.js",
+    "seedCassandra": "node --max-old-space-size=16384 ./db/cassandra/cassandraSeed.js",
     "test": "jest",
     "lint": "eslint"
   },
@@ -24,7 +25,10 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
+    "cassandra": "^0.1.0",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
+    "pg": "^8.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
