--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server-dev": "nodemon server/index.js",
     "seed": "node ./db/seed.js",
     "seedCassandra": "node --max-old-space-size=16384 ./db/cassandra/cassandraSeed.js",
+    "seedPostgres": "node --max-old-space-size=16384 ./db/postgres/postgresSeed.js",
     "test": "jest",
     "lint": "eslint"
   },
@@ -26,6 +27,7 @@
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "cassandra": "^0.1.0",
+    "cassandra-driver": "^4.5.0",
     "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
     "pg": "^8.0.0",
