--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cassandra-driver": "^4.5.0",
     "csv-write-stream": "^2.0.0",
     "express": "^4.17.1",
+    "newrelic": "^6.5.0",
     "pg": "^8.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
@@ -41,7 +42,7 @@
     "@babel/preset-react": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-jest": "^25.1.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
