update k6 stress test and implement entire CRUD in server controller and index file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ config.js
 
 # license key and setup for new relic
 newrelic.js
+
+# remove old db and cassandra files from git repo
+db/cassandra
+db/original
